# get-field-archetypes

./: .gitignore  pyproject.toml
analysis/: pre_process_data.qmd
scratch/: building_steps.qmd
src/: preprocess_nc.py
